--- a/ru/investment.html
+++ b/ru/investment.html
@@ -9,15 +9,15 @@
 <title>Проект SFERA - Официальный сайт, социальная сеть.</title>
 <meta content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой." name=description>
 <meta content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose" name=keywords>
-<link href=../assets/css/main.e1ae0bf1.css rel=stylesheet>
-<link href=../assets/css/invest1.css rel=stylesheet>
-<link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css rel=stylesheet>
-<link href=../assets/css/header1.css rel=stylesheet>
-<link href=https://kit.fontawesome.com/d455f88091.css rel=stylesheet crossorigin=anonymous>
+<link href=../assets/css/main.e1ae0bf.css rel=stylesheet>
+<link href=../assets/css/invest.css rel=stylesheet>
+<link href=../assets/css/header.css rel=stylesheet>
 <div class=page>
   <nav class=nav_menu id=section__landing>
     <input class=myCheckBox id=myCheck type=checkbox>
-    <label class=checkButton for=myCheck><i class="fa fa-bars"></i></label>
+    <label class=checkButton for=myCheck>
+      <img src="../assets/img/icons/burger.svg" class="fa fa-bars" alt="иконка бургер">
+    </label>
     <div class="block-logo block-logo-rus">
       <div class=video-container><span class=close>✖</span>
         <video class=video controls src=../assets/video/video.mp4></video>
@@ -116,7 +116,14 @@
                             <ul class=downloads_button>
                               <li class=lead__download-links-list-item><a class="button button_type_ios button_downloads_ios button_ios_tablet button_theme_light" href=https://apps.apple.com/app/sfera-project/id1498046044>Скачать на iOS</a>
                                 <li class=lead__download-links-list-item><a class="button button_type_android button_android_tablet button_downloads_android button_theme_light" href="https://play.google.com/store/apps/details?id=zone.sfera">Скачать на Android</a></ul>
-                            <li class=link_tablet-menu><a class=menu-links href=https://www.youtube.com/@sfera_zone target=_blank><i class="fa-brands fa-xl fa-youtube"></i></a> <a class=menu-links href=https://www.tiktok.com/@project_sfera target=_blank><i class="fa-brands fa-xl fa-tiktok"></i></a> <a class=menu-links href=https://vk.com/projectsfera target=_blank><i class="fa-brands fa-xl fa-vk"></i></a> <a class=menu-links href=https://dzen.ru/sferalive target=_blank><i class="fa-brands fa-xl fa-yandex"></i></a> <a class=menu-links href=https://www.instagram.com/sfera_motivator/ target=_blank><i class="fa-brands fa-xl fa-instagram"></i></a></ul>
+                                  <li class="link_tablet-menu" >
+                                    <a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><img src="../assets/img/icons/youtube.svg" class="fa-brands fa-youtube fa-xl"></a>
+                                    <a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><img src="../assets/img/icons/tiktok.svg" class="fa-brands fa-tiktok fa-xl"></a>
+                                    <a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><img src="../assets/img/icons/vk.svg" class="fa-brands fa-vk fa-xl"></i></a>
+                                    <a class=menu-links href=https://dzen.ru/sferalive target=_blank><img src="../assets/img/icons/dzen.svg" class="fa-brands fa-xl fa-yandex"></i></a>
+                                    <a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><img src="../assets/img/icons/instagram.svg" class="fa-brands fa-instagram fa-xl"></a>
+                                </li> 
+                              </ul>
     </div>
     <div class="langs langs-rus"><img alt="" src=../assets/img/language_24px.svg class=langs_image>
       <ul class=langs__list>
