--- a/cs/apps.html
+++ b/cs/apps.html
@@ -11,12 +11,12 @@
   <meta name="description" content="SFERA je mobilní aplikace, která zahrnuje posly, datování, hledání práce, sociální síť a další. V rámci platformy mezi sebou úzce spolupracují desítky aplikací.">
 	<meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
   <title>Oficiální web projektu SFERA, sociální síť.</title>
-  <link href="../assets/css/main.e1ae0bf1.css" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/apps1.css">
+  <link href="../assets/css/main.e1ae0bf.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/apps.css">
   <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../assets/css/header1.css">
-  <link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="../assets/css/header.css">
+  <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous"> -->
 
 </head>
 
@@ -25,7 +25,7 @@
       <nav class="nav_menu" id="section__landing">
           <input type="checkbox" class="myCheckBox" id="myCheck">
           <label for="myCheck" class="checkButton">
-              <i class="fa fa-bars"></i>
+            <img src="../assets/img/icons/burger.svg" class="fa fa-bars" alt="icon burger">
           </label>
           <div class="block-logo">
               <div class="video-container">
@@ -141,10 +141,10 @@
                 </li>
 
                 <li class="link_tablet-menu" >
-                  <a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
-                  <a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
-                  <a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><i class="fa-brands fa-vk fa-xl"></i></a>
-                  <a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
+                  <a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><img src="../assets/img/icons/youtube.svg" class="fa-brands fa-youtube fa-xl"></a>
+                  <a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><img src="../assets/img/icons/tiktok.svg" class="fa-brands fa-tiktok fa-xl"></a>
+                  <a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><img src="../assets/img/icons/vk.svg" class="fa-brands fa-vk fa-xl"></i></a>
+                  <a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><img src="../assets/img/icons/instagram.svg" class="fa-brands fa-instagram fa-xl"></a>
               </li> 
               </ul>
           </div>
