--- a/cs/downloads.html
+++ b/cs/downloads.html
@@ -8,16 +8,16 @@
 <link href=../assets/img/favicon-16px.51bc9ce7.png rel=icon sizes=16x16 type=image/png>
 <link href=../assets/img/favicon-32px.89beb086.png rel=icon sizes=32x32 type=image/png>
 <link href=../assets/img/favicon-64px.7cf38571.png rel=icon sizes=64x64 type=image/png>
-<link href=../assets/css/main.e1ae0bf1.css rel=stylesheet>
-<link href=../assets/css/downloads1.css rel=stylesheet>
-<link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css rel=stylesheet>
-<link href=../assets/css/header1.css rel=stylesheet>
-<link href=https://kit.fontawesome.com/d455f88091.css rel=stylesheet crossorigin=anonymous>
+<link href=../assets/css/main.e1ae0bf.css rel=stylesheet>
+<link href=../assets/css/downloads.css rel=stylesheet>
+<link href=../assets/css/header.css rel=stylesheet>
 <title>Oficiální web projektu SFERA, sociální síť.</title>
 <div class=page>
   <nav class=nav_menu>
     <input class=myCheckBox id=myCheck type=checkbox>
-    <label class=checkButton for=myCheck><i class="fa fa-bars"></i></label>
+    <label class=checkButton for=myCheck>
+      <img src="../assets/img/icons/burger.svg" class="fa fa-bars" alt="icon burger">
+    </label>
     <div class=block-logo>
       <div class=video-container><span class=close>✖</span>
         <video class=video controls src="../assets/video/promo cs.mp4"></video>
@@ -116,7 +116,13 @@
                             <ul class=downloads_button>
                               <li class=lead__download-links-list-item><a class="button button_theme_light button_downloads_ios button_ios_tablet button_type_ios" href=https://apps.apple.com/app/sfera-project/id1498046044>Stáhnout na iOS</a>
                                 <li class=lead__download-links-list-item><a class="button button_theme_light button_android_tablet button_downloads_android button_type_android" href="https://play.google.com/store/apps/details?id=zone.sfera">Stáhnout na Android</a></ul>
-                            <li class=link_tablet-menu><a class=menu-links href=https://www.youtube.com/@sfera_zone target=_blank><i class="fa-brands fa-xl fa-youtube"></i></a> <a class=menu-links href=https://www.tiktok.com/@project_sfera target=_blank><i class="fa-brands fa-xl fa-tiktok"></i></a> <a class=menu-links href=https://vk.com/projectsfera target=_blank><i class="fa-brands fa-xl fa-vk"></i></a> <a class=menu-links href=https://www.instagram.com/sfera_motivator/ target=_blank><i class="fa-brands fa-xl fa-instagram"></i></a></ul>
+                                  <li class="link_tablet-menu" >
+                                    <a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><img src="../assets/img/icons/youtube.svg" class="fa-brands fa-youtube fa-xl"></a>
+                                    <a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><img src="../assets/img/icons/tiktok.svg" class="fa-brands fa-tiktok fa-xl"></a>
+                                    <a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><img src="../assets/img/icons/vk.svg" class="fa-brands fa-vk fa-xl"></i></a>
+                                    <a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><img src="../assets/img/icons/instagram.svg" class="fa-brands fa-instagram fa-xl"></a>
+                                </li> 
+                              </ul>
     </div>
     <div class=langs><img alt="" class=langs_image src=../assets/img/language_24px.svg>
       <ul class=langs__list>
@@ -156,6 +162,6 @@
     </section>
   </main>
 </div>
-<script src=https://kit.fontawesome.com/d455f88091.js crossorigin=anonymous></script>
-<script src=assets/js/main.4.befb3660.js defer></script>
 <script src=../assets/js/main.js></script>
+</body>
+</html>
