--- a/en/investment.html
+++ b/en/investment.html
@@ -7,15 +7,15 @@
 <link href=../assets/img/favicon-32px.89beb086.png rel=icon sizes=32x32 type=image/png>
 <link href=../assets/img/favicon-64px.7cf38571.png rel=icon sizes=64x64 type=image/png>
 <title>SFERA Project - Official website, social network.</title>
-<link href=../assets/css/main.e1ae0bf1.css rel=stylesheet>
-<link href=../assets/css/invest1.css rel=stylesheet>
-<link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css rel=stylesheet>
-<link href=../assets/css/header1.css rel=stylesheet>
-<link href=https://kit.fontawesome.com/d455f88091.css rel=stylesheet crossorigin=anonymous>
+<link href=../assets/css/main.e1ae0bf.css rel=stylesheet>
+<link href=../assets/css/invest.css rel=stylesheet>
+<link href=../assets/css/header.css rel=stylesheet>
 <div class=page>
   <nav class=nav_menu id=section__landing>
     <input class=myCheckBox id=myCheck type=checkbox>
-    <label class=checkButton for=myCheck><i class="fa fa-bars"></i></label>
+    <label class=checkButton for=myCheck>
+      <img src="../assets/img/icons/burger.svg" class="fa fa-bars" alt="icon-burger">
+    </label>
     <div class=block-logo>
       <div class=video-container><span class=close>✖</span>
         <video class=video controls src="../assets/video/promo en.mp4"></video>
@@ -107,13 +107,18 @@
                   <li class="nav_list-item active"><a class=nav_list-link href=#>Investment</a>
                     <li class=nav_list-item><a class=nav_list-link href=./../en/team.html>Team</a>
                       <li class=lang_tablet>
-                        <div class=img_lang><img alt="" src=../assets/img/language_tablet.png class=img_lang-tablet></div>
+                        <div class=img_lang><img alt="icon leng" src=../assets/img/language_tablet.png class=img_lang-tablet></div>
                         <div class=list_lang-tablet><a class="lang_list-link active" href=#>English</a> <a class=lang_list-link href=../ru/investment.html>Russian</a> <a class=lang_list-link href=../cs/investment.html>Ceština</a></div>
                         <li class=download_button-tablet>
                           <ul class=downloads_button>
                             <li class=lead__download-links-list-item><a class="button button_type_ios button_downloads_ios button_ios_tablet button_theme_light" href=https://apps.apple.com/app/sfera-project/id1498046044>Download on iOS</a>
                               <li class=lead__download-links-list-item><a class="button button_type_android button_android_tablet button_downloads_android button_theme_light" href="https://play.google.com/store/apps/details?id=zone.sfera">Download on Android</a></ul>
-                          <li class=link_tablet-menu><a class=menu-links href=https://www.youtube.com/@sfera_zone><i class="fa-brands fa-xl fa-youtube"></i></a> <a class=menu-links href=https://www.tiktok.com/@project_sfera><i class="fa-brands fa-xl fa-tiktok"></i></a> <a class=menu-links href=https://vk.com/projectsfera><i class="fa-brands fa-xl fa-vk"></i></a> <a class=menu-links href=https://www.instagram.com/sfera_motivator/><i class="fa-brands fa-xl fa-instagram"></i></a>
+                                <li class="link_tablet-menu" >
+                                  <a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><img src="../assets/img/icons/youtube.svg" class="fa-brands fa-youtube fa-xl"></a>
+                                  <a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><img src="../assets/img/icons/tiktok.svg" class="fa-brands fa-tiktok fa-xl"></a>
+                                  <a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><img src="../assets/img/icons/vk.svg" class="fa-brands fa-vk fa-xl"></i></a>
+                                  <a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><img src="../assets/img/icons/instagram.svg" class="fa-brands fa-instagram fa-xl"></a>
+                              </li> 
     </ul>
     <div class="langs langs-rus"><img alt="" src=../assets/img/language_24px.svg class=langs_image>
       <ul class=langs__list>
@@ -233,6 +238,7 @@
     </div>
   </footer>
 </div>
-<script src=https://kit.fontawesome.com/d455f88091.js crossorigin=anonymous></script>
 <script src=../assets/js/invesr.en.js></script>
 <script src=../assets/js/main.js></script>
+</body>
+</html>
