--- a/ru/index.html
+++ b/ru/index.html
@@ -10,19 +10,17 @@
 		<link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   	<link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   	<link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
-		<link rel="stylesheet" href="../assets/css/landing1.css">
-		<link rel="stylesheet" href="../assets/css/landing-card1.css">
-		<link rel="stylesheet" href="../assets/css/main.e1ae0bf1.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
-		<link rel="stylesheet" href="../assets/css/header1.css">
+		<link rel="stylesheet" href="../assets/css/landing.css">
+		<link rel="stylesheet" href="../assets/css/landing-card.css">
+		<link rel="stylesheet" href="../assets/css/main.e1ae0bf.css">
+		<link rel="stylesheet" href="../assets/css/header.css">
 	</head>
 	<body>
 		<div class="page">
 			<nav class="nav_menu" id="section__landing">
 				<input type="checkbox" class="myCheckBox" id="myCheck">
 				<label for="myCheck" class="checkButton">
-					<i class="fa fa-bars"></i>
+					<img src="../assets/img/icons/burger.svg" class="fa fa-bars" alt="иконка бургер">
 				</label>
 				<div class="block-logo">
 					<div class="video-container">
@@ -138,11 +136,11 @@
 							</ul>
 						</li>
 						<li class="link_tablet-menu" >
-							<a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
-							<a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
-							<a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><i class="fa-brands fa-vk fa-xl"></i></a>
-							<a class="menu-links" href=" https://dzen.ru/sferalive" target="_blank"><i class="fa-brands fa-yandex fa-xl" ></i></a>
-							<a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
+							<a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><img src="../assets/img/icons/youtube.svg" class="fa-brands fa-youtube fa-xl"></a>
+							<a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><img src="../assets/img/icons/tiktok.svg" class="fa-brands fa-tiktok fa-xl"></a>
+							<a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><img src="../assets/img/icons/vk.svg" class="fa-brands fa-vk fa-xl"></i></a>
+							<a class=menu-links href=https://dzen.ru/sferalive target=_blank><img src="../assets/img/icons/dzen.svg" class="fa-brands fa-xl fa-yandex"></i></a>
+							<a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><img src="../assets/img/icons/instagram.svg" class="fa-brands fa-instagram fa-xl"></a>
 					</li> 
 					</ul>
 				</div>
@@ -495,7 +493,6 @@
       </div>
     </footer>
 		</div>
-			<script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
 			<script src="../assets/js/index.js"></script>
 			<script src="../assets/js/main.js"></script>
 
