--- a/en/investment.html
+++ b/en/investment.html
@@ -194,7 +194,7 @@
                 <p id="card-body__list_2" class="card-body__list_2" type="text" >4584-4328-3958-7574<button onclick="copyText()" class="card-body__list_copy"><img class="card-body__list_copy-img" src="../assets/img/investment/content_copy.svg" alt="img"></button></p> -->
 
                 <li class="card-body__list_3"> Send an E-mail specifying the transfer amount. By return letter, we will confirm the amount you have sent and link it to your E-mail.</li>
-                <div class="card-body__list_4">invest@sfera.zone <button onclick="copyTextTwo()" class="card-body__list_copy" ><img class="card-body__list_copy-img" src="../assets/img/investment/content_copy.svg" alt="Card" loading="lazy"></button></div>
+                <div class="card-body__list_4">invest@sfera.zone <button onclick="copyTextTwo()" class="card-body__list_copy" ><span class="tooltiptext" id="myTooltip">Скопировать</span><img class="card-body__list_copy-img" src="../assets/img/investment/content_copy.svg" alt="Card" loading="lazy"></button></div>
               </ol>
               <div class="card-body__text">By making a translation, you confirm that you clearly understand the basics and concepts of venture investment and the principles of startup work, as well as all the risks associated with it.</div>
             </div>
