--- a/en/apps.html
+++ b/en/apps.html
@@ -15,7 +15,7 @@
 
   <link href="../assets/css/main.e1ae0bf.css" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/apps.css">
-  <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/> -->
+  <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../assets/css/header.css">
 </head>
