--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<meta name="description" content="SFERA is a mobile application that includes messenger, dating, job search, social network and much more. In the SFERE platform, dozens of applications interact closely with each other.">
 		<meta name="keywords" content="ASAP, Profile, Feed, Video, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
 		<title>SFERA Project &#x2d; Official website, social network.</title>
-		<link rel="stylesheet" href="assets/css/landing.css">
-		<link rel="stylesheet" href="assets/css/landing-card.css">
-		<link rel="stylesheet" href="assets/css/main.e1ae0bf.css">
-		<link rel="stylesheet" href="assets/css/header.css">
+		<link rel="stylesheet" href="assets/css/landing2.css">
+		<link rel="stylesheet" href="assets/css/landing-card2.css">
+		<link rel="stylesheet" href="assets/css/main.e1ae0bf2.css">
+		<link rel="stylesheet" href="assets/css/header2.css">
 	</head>
 	<body>
 		<div class="page">
