--- a/cs/team.html
+++ b/cs/team.html
@@ -10,9 +10,9 @@
     <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
     <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
     <title>SFERA</title>
-    <link href="../assets/css/main.e1ae0bf.css" rel="stylesheet">
-    <link href="../assets/css/team.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/header.css">
+    <link href="../assets/css/main.e1ae0bf2.css" rel="stylesheet">
+    <link href="../assets/css/team2.css" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/header2.css">
 </head>
 
 <body>
