--- a/ru/investment.html
+++ b/ru/investment.html
@@ -253,3 +253,5 @@
 <script src=https://kit.fontawesome.com/d455f88091.js crossorigin=anonymous></script>
 <script src=../assets/js/invest.js></script>
 <script src=../assets/js/main.js></script>
+</body>
+</html>
