alt,meta,apps,script

--- a/en/apps.html
+++ b/en/apps.html
@@ -11,6 +11,9 @@
   <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
   <meta name="description" content="SFERA is a mobile application that includes messenger, dating, job search, social network and much more. In the SPHERE platform, dozens of applications interact closely with each other.">
   <meta name="keywords" content="ASAP, Profile, Feed, Video, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+	<meta name=«Owner» coment=«SFERA»>
+	<meta name="author" content="SFERA">
   <title>SFERA Project &#x2d; Official website, social network.</title>
 
   <link href="../assets/css/main.e1ae0bf2.css" rel="stylesheet">
@@ -277,7 +280,6 @@
                           <li></li>
                         </ul>
                     </li>
-
                     <li class="apps__briefs-item" id="meetnet">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/meetnet_ios.png" class="apps__brief-image" loading="lazy" alt="iphone dating service" /></div>
@@ -289,14 +291,14 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li class="apps__briefs-item-list-color"></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                          <li></li>
+                          <li></li>
+                          <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
                         </ul>
                     </li>
 
@@ -313,14 +315,14 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li class="apps__briefs-item-list-color"></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
                         </ul>
                     </li>
 
@@ -337,15 +339,14 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li class="apps__briefs-item-list-color"></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
                         </ul>
                     </li>
 
@@ -362,14 +363,14 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li class="apps__briefs-item-list-color"></li>
-                        <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
+                          <li></li>
                         </ul>
                     </li>
 
@@ -386,15 +387,14 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li class="apps__briefs-item-list-color"></li>
-                        <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
                         </ul>
                     </li>
 
@@ -461,7 +461,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png" class="swiper-slide__image" loading="lazy" alt="Work and Business" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/Work & Business.png" class="swiper-slide__image" loading="lazy" alt="Work and Business" /></div>
                             <p class="swiper-slide__title">Work &amp; Business</p>
                         </div>
                     </div>
@@ -551,8 +551,8 @@
       </div>
     </footer>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-  <script src="../assets/js/apps.js"></script>
-  <script src="../assets/js/main.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script defer src="../assets/js/apps.js"></script>
+  <script defer src="../assets/js/main.js"></script>
 </body>
 </html>
