--- a/ru/apps.html
+++ b/ru/apps.html
@@ -10,6 +10,9 @@
   <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
   <meta name="description" content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой.">
   <meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+	<meta name=«Owner» coment=«SFERA»>
+	<meta name="author" content="SFERA">
   <title>Проект SFERA &#x2d; Официальный сайт, социальная сеть.</title>
   <link href="../assets/css/main.e1ae0bf2.css" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/apps2.css">
@@ -283,8 +286,8 @@
                           <li></li>
                           <li></li>
                           <li></li>
-                          <li></li>
                           <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
                           <li></li>
                           <li></li>
                           <li></li>
@@ -307,8 +310,8 @@
                           <li></li>
                           <li></li>
                           <li></li>
-                          <li></li>
                           <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
                           <li></li>
                           <li></li>
                           <li></li>
@@ -326,7 +329,6 @@
                             <p class="apps__brief-text">Позволяет находить новое общение по&nbsp;геолокации и беседовать на&nbsp;любые темы с&nbsp;любым пользователем. Для&nbsp;тех, кому не&nbsp;хватает общения и у&nbsp;кого есть вопросы, на&nbsp;не&nbsp;простые темы.</p>
                         </div>
                         <ul class="apps__briefs-item-list">
-                          <li></li>
                           <li></li>
                           <li></li>
                           <li></li>
@@ -356,8 +358,8 @@
                           <li></li>
                           <li></li>
                           <li></li>
-                          <li></li>
                           <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
                           <li></li>
                         </ul>
                     </li>
@@ -374,7 +376,6 @@
                           <p class="apps__brief-text">Очень простое и понятное подприложение по&nbsp;поиску работы или сотрудников, для&nbsp;простых специальностей не&nbsp;требующих составление резюме. Прямой диалог между соискателем и работодателем.</p>
                         </div>
                         <ul class="apps__briefs-item-list">
-                          <li></li>
                           <li></li>
                           <li></li>
                           <li></li>
@@ -399,7 +400,6 @@
                           <p class="apps__brief-text">Первый сервис имеющий единственной целью&nbsp;— поиск новых друзей в&nbsp;реальной (офлайн) жизни.</p>
                         </div>
                         <ul class="apps__briefs-item-list">
-                          <li></li>
                           <li></li>
                           <li></li>
                           <li></li>
@@ -450,7 +450,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image" loading="lazy" alt="Работа и бизнес" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/Work & Business.png"class="swiper-slide__image" loading="lazy" alt="Работа и бизнес" /></div>
                             <p class="swiper-slide__title">Work &amp; Business</p>
                         </div>
                     </div>
@@ -516,8 +516,7 @@
           </ul>
         </div>
         <div class="footer__download-links">
-          <h2 class="footer__title color_grey">Мы не будем менять мир.<br> 
-Мы перепишем код.</h2>
+          <h2 class="footer__title color_grey">Мы не будем менять мир.<br> Мы перепишем код.</h2>
           <ul class="footer__download-links-list">
             <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
             <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
@@ -540,9 +539,9 @@
       </div>
     </footer>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-  <script src="../assets/js/apps.js"></script>
-  <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
-  <script src="../assets/js/main.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script defer src="../assets/js/apps.js"></script>
+  <script defer src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
+  <script defer src="../assets/js/main.js"></script>
 </body>
 </html>
