--- a/ru/index.html
+++ b/ru/index.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой.">
 		<meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
+		<meta name="keywords" content="HTML, CSS, JavaScript">
+		<meta name=«Owner» coment=«SFERA»>
+		<meta name="author" content="SFERA">
 		<title>Проект SFERA &#x2d; Официальный сайт, социальная сеть.</title>
 		<link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   	<link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
@@ -380,9 +383,9 @@
 				<article>
 					<div class="block-seven-paragraf">
 						<div class="block-six">
-							<a href="" class="block-six-link">#SFERA</a>
-							<a href="" class="block-six-link">#Мессенджер</a>
-							<a href="" class="block-six-link">#Сеть</a>
+							<a href="#" class="block-six-link">#SFERA</a>
+							<a href="#" class="block-six-link">#Мессенджер</a>
+							<a href="#" class="block-six-link">#Сеть</a>
 						</div>
 						<p class="block-seven-p">ПРИСОЕДИНЯЙСЯ</p>
 						<p class="block-seven-text">SFERA находится в не политики.Мы считаем своим домом весь мир и хотим работать на благо всех людей на планете.</p>
@@ -493,8 +496,8 @@
       </div>
     </footer>
 		</div>
-			<script src="../assets/js/index.js"></script>
-			<script src="../assets/js/main.js"></script>
+			<script defer src="../assets/js/index.js"></script>
+			<script defer src="../assets/js/main.js"></script>
 
 	</body>
 </html>
