--- a/cs/apps.html
+++ b/cs/apps.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="description" content="Описание страницы">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+	<meta name=«Owner» coment=«SFERA»>
+	<meta name="author" content="SFERA">
   <link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
@@ -16,10 +19,7 @@
   <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../assets/css/header2.css">
-  <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous"> -->
-
 </head>
-
 <body>
   <div class="page">
       <nav class="nav_menu" id="section__landing">
@@ -301,14 +301,14 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li class="apps__briefs-item-list-color"></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                          <li></li>
+                          <li></li>
+                          <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
                         </ul>
                     </li>
                     <li class="apps__briefs-item"id="choose">
@@ -324,14 +324,14 @@
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li class="apps__briefs-item-list-color"></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
                         </ul>
                     </li>
 
@@ -344,24 +344,20 @@
                     </div>
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">Black Box</h2>
-
                             <p class="apps__brief-text">Umožňuje nacházet novou společnost podle geolokace a mluvit na jakékoli téma s jakýmkoli uživatelem.<br> Pro ty, kterým chybí komunikace a i u koho jsou<br> otázky na komplikovaná témata.</p>
-
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li class="apps__briefs-item-list-color"></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
                         </ul>
                     </li>
-
                     <li class="apps__briefs-item" id="videos">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
@@ -371,20 +367,18 @@
                     </div>
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">Videos</h2>
-
                             <p class="apps__brief-text">Video servis, jehož hlavní výhodou je poskytování mimořádně užitečného, ​​rozvíjejícího, zajímavého obsahu.</p>
-
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li class="apps__briefs-item-list-color"></li>
-                        <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li class="apps__briefs-item-list-color"></li>
+                          <li></li>
+                          <li></li>
                         </ul>
                     </li>
 
@@ -402,7 +396,6 @@
 
                         </div>
                         <ul class="apps__briefs-item-list">
-                          <li></li>
                         <li></li>
                         <li></li>
                         <li></li>
@@ -429,7 +422,6 @@
 
                         </div>
                         <ul class="apps__briefs-item-list">
-                          <li></li>
                           <li></li>
                           <li></li>
                           <li></li>
@@ -490,7 +482,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image"loading="lazy" alt="Práce a podnikání" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/Work & Business.png"class="swiper-slide__image"loading="lazy" alt="Práce a podnikání" /></div>
 
                             <p class="swiper-slide__title">Work &amp; Business</p>
                         </div>
@@ -500,9 +492,7 @@
             </div>
         </section>
         <section class="section apps__future">
-
           <h2 class="section__title align_wiper">Servisy třetí fáze vývoje</h2>
-
           <div class="swiper">
               <div class="swiper-wrapper apps__future-slide">
                   <div class="swiper-slide">
@@ -533,9 +523,7 @@
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-
                           <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/artlab.png" class="swiper-slide__image" loading="lazy" alt="Art Lab" /></div>
-
                           <p class="swiper-slide__title">Art Lab</p>
                       </div>
                   </div>
@@ -554,7 +542,6 @@
     <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
         <div class="footer__contacts">
-
           <h2 class="footer__title">Kontakty</h2>
           <ul class="contacts-list">
             <li class="contacts-list__item">Pro obecné otázky: <a class="link link_theme_dark contacts-list__link" href="mailto:info@sfera.zone">info@sfera.zone</a></li>
@@ -588,9 +575,9 @@
       </div>
     </footer>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-  <script src="../assets/js/apps.js"></script>
-  <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
-  <script src="../assets/js/main.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script defer src="../assets/js/apps.js"></script>
+  <script defer src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
+  <script defer src="../assets/js/main.js"></script>
 </body>
 </html>
