--- a/cs/downloads.html
+++ b/cs/downloads.html
@@ -5,6 +5,9 @@
 <meta content="width=device-width,initial-scale=1" name=viewport>
 <meta content="SFERA je mobilní aplikace, která zahrnuje posly, datování, hledání práce, sociální síť a další. V rámci platformy mezi sebou úzce spolupracují desítky aplikací." name=description>
 <meta content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose" name=keywords>
+<meta name="keywords" content="HTML, CSS, JavaScript">
+<meta name=«Owner» coment=«SFERA»>
+<meta name="author" content="SFERA">
 <link href=../assets/img/favicon-16px.51bc9ce7.png rel=icon sizes=16x16 type=image/png>
 <link href=../assets/img/favicon-32px.89beb086.png rel=icon sizes=32x32 type=image/png>
 <link href=../assets/img/favicon-64px.7cf38571.png rel=icon sizes=64x64 type=image/png>
@@ -162,6 +165,6 @@
     </section>
   </main>
 </div>
-<script src=../assets/js/main.js></script>
+<script defer src=../assets/js/main.js></script>
 </body>
 </html>
