--- a/cs/startups.html
+++ b/cs/startups.html
@@ -3,11 +3,17 @@
 <meta charset=utf-8>
 <meta content="width=device-width,initial-scale=1,maximum-scale=1" name=viewport>
 <meta content="Описание страницы" property=description>
+<meta name="keywords" content="HTML, CSS, JavaScript">
+<meta name=«Owner» coment=«SFERA»>
+<meta name="author" content="SFERA">
 <link href=../assets/img/favicon-16px.51bc9ce7.png rel=icon sizes=16x16 type=image/png>
 <link href=../assets/img/favicon-32px.89beb086.png rel=icon sizes=32x32 type=image/png>
 <link href=../assets/img/favicon-64px.7cf38571.png rel=icon sizes=64x64 type=image/png>
 <meta content="SFERA je mobilní aplikace, která zahrnuje posly, datování, hledání práce, sociální síť a další. V rámci platformy mezi sebou úzce spolupracují desítky aplikací." name=description>
 <title>Oficiální web projektu SFERA, sociální síť.</title>
+<meta name="keywords" content="HTML, CSS, JavaScript">
+<meta name=«Owner» coment=«SFERA»>
+<meta name="author" content="SFERA">
 <link href=../assets/css/main.e1ae0bf2.css rel=stylesheet>
 <link href=../assets/css/startups2.css rel=stylesheet>
 <link href=../assets/css/header2.css rel=stylesheet>
@@ -208,6 +214,6 @@
     </div>
   </footer>
 </div>
-<script src=../assets/js/main.js></script>
+<script defer src=../assets/js/main.js></script>
 </body>
 </html>
