--- a/cs/team.html
+++ b/cs/team.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="SFERA je mobilní aplikace, která zahrnuje posly, datování, hledání práce, sociální síť a další. V rámci platformy mezi sebou úzce spolupracují desítky aplikací.">
 	<title>Oficiální web projektu SFERA, sociální síť.</title>
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+	<meta name=«Owner» coment=«SFERA»>
+	<meta name="author" content="SFERA">
     <link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
     <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
     <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
@@ -387,7 +390,7 @@
         </div>
         </footer>
     </div>
-    <script src="../assets/js/main.js"></script>
+    <script defer src="../assets/js/main.js"></script>
 </body>
 
 </html>
