--- a/en/startups.html
+++ b/en/startups.html
@@ -3,6 +3,9 @@
 <meta charset=utf-8>
 <meta content="width=device-width,initial-scale=1,maximum-scale=1" name=viewport>
 <meta content="Описание страницы" property=description>
+<meta name="keywords" content="HTML, CSS, JavaScript">
+<meta name=«Owner» coment=«SFERA»>
+<meta name="author" content="SFERA">
 <link href=../assets/img/favicon-16px.51bc9ce7.png rel=icon sizes=16x16 type=image/png>
 <link href=../assets/img/favicon-32px.89beb086.png rel=icon sizes=32x32 type=image/png>
 <link href=../assets/img/favicon-64px.7cf38571.png rel=icon sizes=64x64 type=image/png>
@@ -203,8 +206,7 @@
     </div>
   </footer>
 </div>
-<!-- <script src=https://kit.fontawesome.com/d455f88091.js crossorigin=anonymous></script> -->
-<!-- <script src=assets/js/main.3.ddda2f0e.js defer></script> -->
-<script src=../assets/js/main.js></script>
+
+<script defer src=../assets/js/main.js></script>
 </body>
 </html>
