--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="description" content="Описание страницы">
 		<meta name="keywords" content="HTML, CSS, JavaScript">
-		<meta name=«Owner» СОМТЕМТ=«SFERA»>
+		<meta name=«Owner» coment=«SFERA»>
 		<meta name="author" content="SFERA">
-		<!-- <meta http-equiv="refresh" content="30"> -->
   	<link rel="icon" href="./assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   	<link rel="icon" href="./assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   	<link rel="icon" href="./assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
@@ -59,7 +57,6 @@
 							</defs>
 						</svg>
 					</label>
-
 				</div>
 				<ul class="nav_list" >
 					<li class="header_menu-tablet">
@@ -140,10 +137,10 @@
 						</ul>
 					</li>
 					<li class="link_tablet-menu" >
-						<a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><img src="assets/img/icons/youtube.svg" class="fa-brands fa-youtube fa-xl"></a>
-						<a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><img src="assets/img/icons/tiktok.svg" class="fa-brands fa-tiktok fa-xl"></a>
-						<a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><img src="assets/img/icons/vk.svg" class="fa-brands fa-vk fa-xl"></i></a>
-						<a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><img src="assets/img/icons/instagram.svg" class="fa-brands fa-instagram fa-xl"></a>
+						<a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><img src="assets/img/icons/youtube.svg" class="fa-brands fa-youtube fa-xl" alt="icon youtube"></a>
+						<a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><img src="assets/img/icons/tiktok.svg" class="fa-brands fa-tiktok fa-xl" alt="icon tiktok" ></a>
+						<a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><img src="assets/img/icons/vk.svg" class="fa-brands fa-vk fa-xl" alt="icon vk"></i></a>
+						<a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><img src="assets/img/icons/instagram.svg" class="fa-brands fa-instagram fa-xl" alt="icon instagram"></a>
 				</li> 
 				</ul>
 				<div class="langs">
@@ -226,7 +223,7 @@
 						<button class="card-block-top">ASAP</button>
 						<div class="product-inner">
 							<div class="product-front">
-								<img class="front" loading="lazy" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="ASAP iPhone">
+								<image class="front" loading="lazy" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="ASAP iPhone">
 							</div>
 							<div class="product-back">
 								<img class="back" loading="lazy"src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="ASAP android">
@@ -354,9 +351,9 @@
 				<div>
 					<div class="block-seven-paragraf">
 						<div class="block-six">
-							<a href="" class="block-six-link">#SFERA</a>
-							<a href="" class="block-six-link">#Messenger</a>
-							<a href="" class="block-six-link">#Network</a>
+							<a href="#" class="block-six-link">#SFERA</a>
+							<a href="#" class="block-six-link">#Messenger</a>
+							<a href="#" class="block-six-link">#Network</a>
 						</div>
 						<p class="block-seven-p">JOIN</p>
 						<p class="block-seven-text">SFERA is outside of politics. We consider the whole world our home and want to work for the benefit of all people on the planet.</p>
@@ -463,8 +460,7 @@
         </div>
       </div>
 		</footer>
-			<!-- <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script> -->
-			<script src="./assets/js/index.js"></script>
-			<script src="./assets/js/main.js"></script>
+			<script defer src="./assets/js/index.js"></script>
+			<script defer src="./assets/js/main.js"></script>
   </body>
 </html>
