--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -7,6 +7,9 @@
 <link href=../assets/img/favicon-32px.89beb086.png rel=icon sizes=32x32 type=image/png>
 <link href=../assets/img/favicon-64px.7cf38571.png rel=icon sizes=64x64 type=image/png>
 <title>Проект SFERA - Официальный сайт, социальная сеть.</title>
+<meta name="keywords" content="HTML, CSS, JavaScript">
+<meta name=«Owner» coment=«SFERA»>
+<meta name="author" content="SFERA">
 <meta content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой." name=description>
 <meta content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose" name=keywords>
 <link href=../assets/css/main.e1ae0bf2.css rel=stylesheet>
@@ -162,6 +165,6 @@
     </section>
   </main>
 </div>
-<script src=../assets/js/main.js></script>
+<script defer src=../assets/js/main.js></script>
 </body>
 </html>
