--- a/ru/startups.html
+++ b/ru/startups.html
@@ -4,6 +4,9 @@
 <meta content="width=device-width,initial-scale=1,maximum-scale=1" name=viewport>
 <meta content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой." name=description>
 <meta content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose" name=keywords>
+<meta name="keywords" content="HTML, CSS, JavaScript">
+<meta name=«Owner» coment=«SFERA»>
+<meta name="author" content="SFERA">
 <link href=../assets/img/favicon-16px.51bc9ce7.png rel=icon sizes=16x16 type=image/png>
 <link href=../assets/img/favicon-32px.89beb086.png rel=icon sizes=32x32 type=image/png>
 <link href=../assets/img/favicon-64px.7cf38571.png rel=icon sizes=64x64 type=image/png>
@@ -221,7 +224,7 @@
     </div>
   </footer>
 </div>
-<script src=../assets/js/main.js></script>
+<script defer src=../assets/js/main.js></script>
 </body>
 
 </html>
