--- a/ru/team.html
+++ b/ru/team.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой.">
     <meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+	<meta name=«Owner» coment=«SFERA»>
+	<meta name="author" content="SFERA">
     <link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
     <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
     <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
@@ -393,7 +396,7 @@
       </div>
     </footer>
   </div>
-    <script src="../assets/js/main.js"></script>
+    <script defer src="../assets/js/main.js"></script>
 </body>
 
 </html>
