--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<meta name="description" content="SFERA is a mobile application that includes messenger, dating, job search, social network and much more. In the SFERE platform, dozens of applications interact closely with each other.">
 		<meta name="keywords" content="ASAP, Profile, Feed, Video, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
 		<title>SFERA Project &#x2d; Official website, social network.</title>
-		<link rel="stylesheet" href="assets/css/landing2.css">
-		<link rel="stylesheet" href="assets/css/landing-card2.css">
-		<link rel="stylesheet" href="assets/css/main.e1ae0bf2.css">
-		<link rel="stylesheet" href="assets/css/header2.css">
+		<link rel="stylesheet" href="assets/css/landing3.css">
+		<link rel="stylesheet" href="assets/css/landing-card3.css">
+		<link rel="stylesheet" href="assets/css/main.e1ae0bf3.css">
+		<link rel="stylesheet" href="assets/css/header3.css">
 	</head>
 	<body>
 		<div class="page">
@@ -226,10 +226,16 @@
 						<button class="card-block-top">ASAP</button>
 						<div class="product-inner">
 							<div class="product-front">
-								<img class="front" loading="lazy" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="ASAP iPhone">
+								<video class="front" autoplay muted loop>
+									<source src="assets/телефон_андроид.webm" type='video/webm'>
+							  </video>
+								<!-- <img class="front" loading="lazy" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="ASAP iPhone"> -->
 							</div>
 							<div class="product-back">
-								<img class="back" loading="lazy"src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="ASAP android">
+								<video class="back" autoplay muted loop>
+									<source src="assets/телефон_андроид.webm" type='video/webm'>
+							  </video>
+								<!-- <img class="back" loading="lazy" src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="ASAP android"> -->
 							</div>
 							<div class="left-side"></div>
 						</div>
