--- a/cs/index.html
+++ b/cs/index.html
@@ -184,8 +184,14 @@
 			</section>
 			<section class="section-two">
 				<div class="section-two-image">
-					<span ><img class="section-two-image-one"loading="lazy"src="../assets/animation en/IOS/01-asap-ios-eng.gif" alt="Android menu"></span>
-					<span><img class="section-two-image-two" loading="lazy"src="../assets/animation en/ANDROID/01-asap-android-eng.gif" alt="IPhone menu"></span>
+					<video class="section-two-image-one" autoplay muted loop>
+						<source src="/assets/animation en/ios/01-asap-ios-eng.webm" type='video/webm'>
+					</video>
+					<video class="section-two-image-two" autoplay muted loop>
+						<source src="/assets/animation en/android/01-asap-android-eng.webm" type='video/webm'>
+					</video>
+					<!-- <span ><img class="section-two-image-one"loading="lazy"src="../assets/animation en/IOS/01-asap-ios-eng.gif" alt="Android menu"></span>
+					<span><img class="section-two-image-two" loading="lazy"src="../assets/animation en/ANDROID/01-asap-android-eng.gif" alt="IPhone menu"></span> -->
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">Messenger</span>
@@ -224,10 +230,16 @@
 						<button class="card-block-top">ASAP</button>
 						<div class="product-inner">
 							<div class="product-front">
-									<img class="front" src="../assets/animation en/IOS/01-asap-ios-eng.gif" alt="ASAP iPhone">
+								<video class="front" autoplay muted loop>
+									<source src="/assets/animation en/ios/01-asap-ios-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="front" src="../assets/animation en/IOS/01-asap-ios-eng.gif" alt="ASAP iPhone"> -->
 							</div>
 							<div class="product-back">
-									<img class="back"loading="lazy"src="../assets/animation en/ANDROID/01-asap-android-eng.gif" alt="ASAP Android">
+								<video class="back" autoplay muted loop>
+									<source src="/assets/animation en/android/01-asap-android-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="back"loading="lazy"src="../assets/animation en/ANDROID/01-asap-android-eng.gif" alt="ASAP Android"> -->
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -237,10 +249,16 @@
 						<button class="card-block-top">Profil</button>
 						<div class="product-inner">
 							<div class="product-front">
-									<img class="front"loading="lazy"src="../assets/animation en/IOS/02-profile-ios-eng.gif" alt="Profil iPhone">
+								<video class="front" autoplay muted loop>
+									<source src="/assets/animation en/ios/02-profile-ios-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="front"loading="lazy"src="../assets/animation en/IOS/02-profile-ios-eng.gif" alt="Profil iPhone"> -->
 							</div>
 							<div class="product-back">
-									<img class="back"loading="lazy" src="../assets/animation en/ANDROID/02-profile-android-eng.gif" alt="Profil Android">
+								<video class="back" autoplay muted loop>
+									<source src="/assets/animation en/android/02-profile-android-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="back"loading="lazy" src="../assets/animation en/ANDROID/02-profile-android-eng.gif" alt="Profil Android"> -->
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -250,10 +268,16 @@
 						<button class="card-block-top">NewsFeed</button>
 						<div class="product-inner">
 							<div class="product-front">
-									<img class="front"loading="lazy" src="../assets/animation en/IOS/03-lenta-ios-eng.gif" alt="IPhone news feed">
+								<video class="front" autoplay muted loop>
+									<source src="/assets/animation en/ios/03-lenta-ios-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="front"loading="lazy" src="../assets/animation en/IOS/03-lenta-ios-eng.gif" alt="IPhone news feed"> -->
 							</div>
 							<div class="product-back">
-									<img class="back"loading="lazy" src="../assets/animation en/ANDROID/03-lenta-android-eng.gif" alt="Android News Feed">
+								<video class="back" autoplay muted loop>
+									<source src="/assets/animation en/android/03-lenta-android-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="back"loading="lazy" src="../assets/animation en/ANDROID/03-lenta-android-eng.gif" alt="Android News Feed"> -->
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -263,10 +287,16 @@
 						<button class="card-block-top">VideoS</button>
 						<div class="product-inner">
 							<div class="product-front">
-									<img  class="front"loading="lazy" src="../assets/animation en/IOS/04-videos-ios-eng.gif" alt="Video na iPhonu">
+								<video class="front" autoplay muted loop>
+									<source src="/assets/animation en/ios/04-videos-ios-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img  class="front"loading="lazy" src="../assets/animation en/IOS/04-videos-ios-eng.gif" alt="Video na iPhonu"> -->
 							</div>
 							<div class="product-back">
-									<img class="back"loading="lazy" src="../assets/animation en/ANDROID/04-videos-android-eng.gif" alt="Video na Androidu">
+								<video class="back" autoplay muted loop>
+									<source src="/assets/animation en/android/04-videos-android-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="back"loading="lazy" src="../assets/animation en/ANDROID/04-videos-android-eng.gif" alt="Video na Androidu"> -->
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -276,10 +306,16 @@
 						<button class="card-block-top">BlackBox</button>
 						<div class="product-inner">
 							<div class="product-front">
-									<img class="front"loading="lazy" src="../assets/animation en/IOS/05-black-box-ios-eng.gif" alt="Blackbox iPhonu">
+								<video class="front" autoplay muted loop>
+									<source src="/assets/animation en/ios/05-black-box-ios-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="front"loading="lazy" src="../assets/animation en/IOS/05-black-box-ios-eng.gif" alt="Blackbox iPhonu"> -->
 							</div>
 							<div class="product-back">
-									<img class="back"loading="lazy" src="../assets/animation en/ANDROID/05-black-box-android-eng.gif" alt="Blackbox Androidu">
+								<video class="back" autoplay muted loop>
+									<source src="/assets/animation en/android/05-black-box-android-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="back"loading="lazy" src="../assets/animation en/ANDROID/05-black-box-android-eng.gif" alt="Blackbox Androidu"> -->
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -289,10 +325,16 @@
 						<button class="card-block-top">FindFriends</button>
 						<div class="product-inner">
 							<div class="product-front">
-									<img class="front"loading="lazy"src="../assets/animation en/IOS/06-FF-ios-eng.gif" alt="Hledání přátel">
+								<video class="front" autoplay muted loop>
+									<source src="/assets/animation en/ios/06-FF-ios-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="front"loading="lazy"src="../assets/animation en/IOS/06-FF-ios-eng.gif" alt="Hledání přátel"> -->
 							</div>
 							<div class="product-back">
-									<img class="back"loading="lazy" src="../assets/animation en/ANDROID/06-FF-android-eng.gif" alt="Hledání přátel">
+								<video class="back" autoplay muted loop>
+									<source src="/assets/animation en/android/06-FF-android-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="back"loading="lazy" src="../assets/animation en/ANDROID/06-FF-android-eng.gif" alt="Hledání přátel"> -->
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -302,11 +344,16 @@
 						<button class="card-block-top">MeetNet</button>
 						<div class="product-inner">
 							<div class="product-front">
-								
-									<img class="front"loading="lazy" src="../assets/animation en/IOS/07-Meet-Net-ios-eng.gif" alt="Najít spřízněnou duši">
+								<video class="front" autoplay muted loop>
+									<source src="/assets/animation en/ios/07-Meet-Net-ios-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="front"loading="lazy" src="../assets/animation en/IOS/07-Meet-Net-ios-eng.gif" alt="Najít spřízněnou duši"> -->
 							</div>
 							<div class="product-back">
-									<img class="back"loading="lazy" src="../assets/animation en/ANDROID/07-Meet-Net-android-eng.gif" alt="Najít spřízněnou duši">
+								<video class="back" autoplay muted loop>
+									<source src="/assets/animation en/android/07-Meet-Net-android-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="back"loading="lazy" src="../assets/animation en/ANDROID/07-Meet-Net-android-eng.gif" alt="Najít spřízněnou duši"> -->
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -316,11 +363,16 @@
 						<button class="card-block-top">JobLite</button>
 						<div class="product-inner">
 							<div class="product-front">
-								
-									<img class="front"loading="lazy" src="../assets/animation en/IOS/08-Job-Lite-ios-eng.gif" alt="Hledání práce ">
+								<video class="front" autoplay muted loop>
+									<source src="/assets/animation en/ios/08-Job-Lite-ios-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="front"loading="lazy" src="../assets/animation en/IOS/08-Job-Lite-ios-eng.gif" alt="Hledání práce "> -->
 							</div>
 							<div class="product-back">
-									<img class="back"loading="lazy" src="../assets/animation en/ANDROID/08-Job-Lite-android-eng.gif" alt="Hledání práce ">
+								<video class="back" autoplay muted loop>
+									<source src="/assets/animation en/android/08-Job-Lite-android-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="back"loading="lazy" src="../assets/animation en/ANDROID/08-Job-Lite-android-eng.gif" alt="Hledání práce "> -->
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -330,10 +382,16 @@
 						<button class="card-block-top">Choose</button>
 						<div class="product-inner">
 							<div class="product-front">
-									<img class="front" loading="lazy"src="../assets/animation en/IOS/09-Choose-ios-eng.gif" alt="Krásné obrázky iPhone">
+								<video class="front" autoplay muted loop>
+									<source src="/assets/animation en/ios/09-Choose-ios-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="front" loading="lazy"src="../assets/animation en/IOS/09-Choose-ios-eng.gif" alt="Krásné obrázky iPhone"> -->
 							</div>
 							<div class="product-back">
-									<img class="back" loading="lazy"src="../assets/animation en/ANDROID/09-Choose-android-eng.gif" alt="Krásné obrázky Android">
+								<video class="back" autoplay muted loop>
+									<source src="/assets/animation en/android/09-Choose-android-eng.webm" type='video/webm'>
+								</video>
+									<!-- <img class="back" loading="lazy"src="../assets/animation en/ANDROID/09-Choose-android-eng.gif" alt="Krásné obrázky Android"> -->
 							</div>
 							<div class="left-side"></div>
 						</div>
