--- a/index.html
+++ b/index.html
@@ -182,8 +182,14 @@
 			</section>
 			<section class="section-two">
 				<div class="section-two-image">
-					<span ><img class="section-two-image-one" loading="lazy" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="Android menu"></span>
-					<span><img class="section-two-image-two"loading="lazy" src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="iPhone menu"></span>
+					<video class="section-two-image-one" autoplay muted loop>
+						<source src="/assets/animation en/ios/01-asap-ios-eng.webm" type='video/webm'>
+					</video>
+					<video class="section-two-image-two" autoplay muted loop>
+						<source src="/assets/animation en/android/01-asap-android-eng.webm" type='video/webm'>
+					</video>
+					<!-- <span ><img class="section-two-image-one" loading="lazy" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="Android menu"></span>
+					<span><img class="section-two-image-two"loading="lazy" src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="iPhone menu"></span> -->
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">Messenger</span>
@@ -223,19 +229,15 @@
 						<button class="card-block-top">ASAP</button>
 						<div class="product-inner">
 							<div class="product-front">
-<<<<<<< HEAD
 								<video class="front" autoplay muted loop>
-									<source src="assets/телефон_андроид.webm" type='video/webm'>
-							  </video>
-								<!-- <img class="front" loading="lazy" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="ASAP iPhone"> -->
-=======
-								<image class="front" loading="lazy" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="ASAP iPhone">
->>>>>>> 3bad851fcf1cfaa0383dc4f712599b13b22cbe27
+									<source src="/assets/animation en/ios/01-asap-ios-eng.webm" type='video/webm'>
+								</video>
+								<!-- <image class="front" loading="lazy" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="ASAP iPhone"> -->
 							</div>
 							<div class="product-back">
 								<video class="back" autoplay muted loop>
-									<source src="assets/телефон_андроид.webm" type='video/webm'>
-							  </video>
+									<source src="/assets/animation en/android/01-asap-android-eng.webm" type='video/webm'>
+								</video>
 								<!-- <img class="back" loading="lazy" src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="ASAP android"> -->
 							</div>
 							<div class="left-side"></div>
@@ -246,10 +248,16 @@
 					<button class="card-block-top">Profile</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img class="front" loading="lazy" src="assets/animation en/IOS/02-profile-ios-eng.gif" alt="iPhone Profile">
+							<video class="front" autoplay muted loop>
+								<source src="/assets/animation en/ios/02-profile-ios-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="front" loading="lazy" src="assets/animation en/IOS/02-profile-ios-eng.gif" alt="iPhone Profile"> -->
 						</div>
 						<div class="product-back">
-								<img class="back" loading="lazy" src="assets/animation en/ANDROID/02-profile-android-eng.gif" alt="Android Profile">
+							<video class="back" autoplay muted loop>
+								<source src="/assets/animation en/android/02-profile-android-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="back" loading="lazy" src="assets/animation en/ANDROID/02-profile-android-eng.gif" alt="Android Profile"> -->
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -259,10 +267,16 @@
 					<button class="card-block-top">Feed</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img class="front" loading="lazy" src="assets/animation en/IOS/03-lenta-ios-eng.gif" alt="iPhone News Feed">
+							<video class="front" autoplay muted loop>
+								<source src="/assets/animation en/ios/03-lenta-ios-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="front" loading="lazy" src="assets/animation en/IOS/03-lenta-ios-eng.gif" alt="iPhone News Feed"> -->
 						</div>
 						<div class="product-back">
-								<img class="back" loading="lazy" src="assets/animation en/ANDROID/03-lenta-android-eng.gif" alt="Android News Feed">
+							<video class="back" autoplay muted loop>
+								<source src="/assets/animation en/android/03-lenta-android-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="back" loading="lazy" src="assets/animation en/ANDROID/03-lenta-android-eng.gif" alt="Android News Feed"> -->
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -272,10 +286,16 @@
 					<button class="card-block-top">VideoS</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img  class="front" loading="lazy" loading="lazy" src="assets/animation en/IOS/04-videos-ios-eng.gif" alt="Video on iPhone">
+							<video class="front" autoplay muted loop>
+								<source src="/assets/animation en/ios/04-videos-ios-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img  class="front" loading="lazy" loading="lazy" src="assets/animation en/IOS/04-videos-ios-eng.gif" alt="Video on iPhone"> -->
 						</div>
 						<div class="product-back">
-								<img class="back" loading="lazy" src="assets/animation en/ANDROID/04-videos-android-eng.gif" alt="Videos on android">
+							<video class="back" autoplay muted loop>
+								<source src="/assets/animation en/android/04-videos-android-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="back" loading="lazy" src="assets/animation en/ANDROID/04-videos-android-eng.gif" alt="Videos on android"> -->
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -285,10 +305,16 @@
 					<button class="card-block-top">BlackBox</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img class="front" src="assets/animation en/IOS/05-black-box-ios-eng.gif" alt="Blackbox iPhone">
+							<video class="front" autoplay muted loop>
+								<source src="/assets/animation en/ios/05-black-box-ios-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="front" src="assets/animation en/IOS/05-black-box-ios-eng.gif" alt="Blackbox iPhone"> -->
 						</div>
 						<div class="product-back">
-								<img class="back" loading="lazy" src="assets/animation en/ANDROID/05-black-box-android-eng.gif" alt="Blackbox android">
+							<video class="back" autoplay muted loop>
+								<source src="/assets/animation en/android/05-black-box-android-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="back" loading="lazy" src="assets/animation en/ANDROID/05-black-box-android-eng.gif" alt="Blackbox android"> -->
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -298,10 +324,16 @@
 					<button class="card-block-top">FindFriends</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img class="front" loading="lazy" src="assets/animation en/IOS/06-FF-ios-eng.gif" alt="Search for friends">
+							<video class="front" autoplay muted loop>
+								<source src="/assets/animation en/ios/06-FF-ios-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="front" loading="lazy" src="assets/animation en/IOS/06-FF-ios-eng.gif" alt="Search for friends"> -->
 						</div>
 						<div class="product-back">
-								<img class="back" loading="lazy" src="assets/animation en/ANDROID/06-FF-android-eng.gif" alt="Search for friends">
+							<video class="back" autoplay muted loop>
+								<source src="/assets/animation en/android/06-FF-android-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="back" loading="lazy" src="assets/animation en/ANDROID/06-FF-android-eng.gif" alt="Search for friends"> -->
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -312,11 +344,17 @@
 					<div class="product-inner eng-product-inner">
 						<div class="product-front eng-product-front">
 							<div>
-								<img class="front eng-front" loading="lazy"src="assets/animation en/IOS/07-Meet-Net-ios-eng.gif" alt="Find a soul mate">
+								<video class="front" autoplay muted loop>
+									<source src="/assets/animation en/ios/07-Meet-Net-ios-eng.webm" type='video/webm'>
+								</video>
+								<!-- <img class="front eng-front" loading="lazy"src="assets/animation en/IOS/07-Meet-Net-ios-eng.gif" alt="Find a soul mate"> -->
 							</div>
 						</div>
 						<div class="product-back">
-								<img class="back" loading="lazy" src="assets/animation en/ANDROID/07-Meet-Net-android-eng.gif" alt="Find a soul mate">
+							<video class="back" autoplay muted loop>
+								<source src="/assets/animation en/android/07-Meet-Net-android-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="back" loading="lazy" src="assets/animation en/ANDROID/07-Meet-Net-android-eng.gif" alt="Find a soul mate"> -->
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -326,10 +364,16 @@
 					<button class="card-block-top">JobLite</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img class="front" loading="lazy" src="assets/animation en/IOS/08-Job-Lite-ios-eng.gif" alt="Job search"> 
+							<video class="front" autoplay muted loop>
+								<source src="/assets/animation en/ios/08-Job-Lite-ios-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="front" loading="lazy" src="assets/animation en/IOS/08-Job-Lite-ios-eng.gif" alt="Job search">  -->
 						</div>
 						<div class="product-back">
-								<img class="back" loading="lazy" src="assets/animation en/ANDROID/08-Job-Lite-android-eng.gif" alt="Job search">
+							<video class="back" autoplay muted loop>
+								<source src="/assets/animation en/android/08-Job-Lite-android-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="back" loading="lazy" src="assets/animation en/ANDROID/08-Job-Lite-android-eng.gif" alt="Job search"> -->
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -339,10 +383,16 @@
 					<button class="card-block-top">Choose</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img class="front" loading="lazy" src="assets/animation en/IOS/09-Choose-ios-eng.gif" alt="Beautiful iPhone pictures">
+							<video class="front" autoplay muted loop>
+								<source src="/assets/animation en/ios/09-Choose-ios-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="front" loading="lazy" src="assets/animation en/IOS/09-Choose-ios-eng.gif" alt="Beautiful iPhone pictures"> -->
 						</div>
 						<div class="product-back">
-								<img class="back" loading="lazy" src="assets/animation en/ANDROID/09-Choose-android-eng.gif" alt="Beautiful iPhone pictures">
+							<video class="back" autoplay muted loop>
+								<source src="/assets/animation en/android/09-Choose-android-eng.webm" type='video/webm'>
+							</video>
+								<!-- <img class="back" loading="lazy" src="assets/animation en/ANDROID/09-Choose-android-eng.gif" alt="Beautiful iPhone pictures"> -->
 						</div>
 						<div class="left-side "></div>
 					</div>
