--- a/cs/index.html
+++ b/cs/index.html
@@ -403,63 +403,63 @@
 				<p class="about-as-heading-last">NYNÍ MÁME VE VÝVOJI <span class="about-as-heading-color"> VÍCE NEŽ 20  SLUŽEB</span></p>
 				<ul class="block-eight-card">
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/general/1 921.png" alt="Události">
+						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/generalEng/iOS - меню (7).png" alt="Události">
 						<p class="block-eight-card-list-paragraf">Události</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/general/2 24.png" alt="FM-kanály ">
+						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/generalEng/iOS - меню (8).png" alt="FM-kanály ">
 						<p class="block-eight-card-list-paragraf">FM-kanály</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="../assets/image-lending/general/3.png" alt="Hlasové kanály">
+						<img class="block-eight-card-image" src="../assets/image-lending/generalEng/iOS - меню (9).png" alt="Hlasové kanály">
 						<p class="block-eight-card-list-paragraf">Hlasové <br> kanály </p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/general/4.png" alt="Knihy">
+						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/generalEng/iOS - меню (10).png" alt="Knihy">
 						<p class="block-eight-card-list-paragraf">Knihy</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/general/5.png" alt="Talenty">
+						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/generalEng/iOS - меню (11).png" alt="Talenty">
 						<p class="block-eight-card-list-paragraf">Talenty</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"loading="lazy"src="../assets/image-lending/general/6.png" alt="Work & Business">
+						<img class="block-eight-card-image"loading="lazy"src="../assets/image-lending/generalEng/iOS - меню (12).png" alt="Work & Business">
 						<p class="block-eight-card-list-paragraf">Work & <br> Business</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/general/9.png" alt="Spor-T">
+						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/generalEng/iOS - меню (1).png" alt="Spor-T">
 						<p class="block-eight-card-list-paragraf">Spor-T</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/general/8.png" alt="Comedy-feed">
+						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/generalEng/iOS - меню.png" alt="Comedy-feed">
 						<p class="block-eight-card-list-paragraf">Comedy-feed</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/general/10.png" alt="Travel">
+						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/generalEng/iOS - меню (2).png" alt="Travel">
 						<p class="block-eight-card-list-paragraf">sTravel</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy"src="../assets/image-lending/general/11.png" alt="Industry news">
+						<img class="block-eight-card-image" loading="lazy"src="../assets/image-lending/generalEng/iOS - меню (3).png" alt="Industry news">
 						<p class="block-eight-card-list-paragraf">Industry news</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/general/12.png" alt="Art Lab">
+						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/generalEng/iOS - меню (14).png" alt="Art Lab">
 						<p class="block-eight-card-list-paragraf">Art Lab</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/general/13.png" alt="Ask Me">
+						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/generalEng/iOS - меню (4).png" alt="Ask Me">
 						<p class="block-eight-card-list-paragraf">Ask Me</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/general/14.png" alt="Calendar">
+						<img class="block-eight-card-image"loading="lazy" src="../assets/image-lending/generalEng/iOS - меню (5).png" alt="Calendar">
 						<p class="block-eight-card-list-paragraf">Calendar</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy"src="../assets/image-lending/general/7.png" alt="">
+						<img class="block-eight-card-image" loading="lazy"src="../assets/image-lending/generalEng/iOS - меню (6).png" alt="">
 						<p class="block-eight-card-list-paragraf" >White Box</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy"src="../assets/image-lending/general/7.png" alt="">
+						<img class="block-eight-card-image" loading="lazy"src="../assets/image-lending/generalEng/iOS - меню (13).png" alt="">
 						<p class="block-eight-card-list-paragraf">Holy Book</p>
 					</li>
 
