--- a/index.html
+++ b/index.html
@@ -420,63 +420,63 @@
 				<p class="about-as-heading-last">NOW WE HAVE <span class="about-as-heading-color">MORE THAN 20 SERVICES</span>IN DEVELOPMENT</p>
 				<ul class="block-eight-card">
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/1 921.png" alt="Events">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (7).png" alt="Events">
 						<p class="block-eight-card-list-paragraf">Events</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/2 24.png" alt="Live broadcasts">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (8).png" alt="Live broadcasts">
 						<p class="block-eight-card-list-paragraf">FM channels</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/3.png" alt="Voice channel">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (9).png" alt="Voice channel">
 						<p class="block-eight-card-list-paragraf">Voice  <br>channels</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/4.png" alt="Books">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (10).png" alt="Books">
 						<p class="block-eight-card-list-paragraf">Books</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/5.png" alt="Talents">
+						<img class="block-eight-card-image" src="./assets/image-lending/generalEng/iOS - меню (11).png" alt="Talents">
 						<p class="block-eight-card-list-paragraf">Talents</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/6.png" alt="Work and business">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (12).png" alt="Work and business">
 						<p class="block-eight-card-list-paragraf">Work & <br> Business</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/9.png" alt="Sports nutrition Diet">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (1).png" alt="Sports nutrition Diet">
 						<p class="block-eight-card-list-paragraf">Spor-T</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/8.png" alt="Comedy Feed">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню.png" alt="Comedy Feed">
 						<p class="block-eight-card-list-paragraf">Comedy Feed</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/10.png" alt="Travel hotels where to travel ">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (2).png" alt="Travel hotels where to travel ">
 						<p class="block-eight-card-list-paragraf">sTravel</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy"src="./assets/image-lending/general/11.png" alt="Latest news">
+						<img class="block-eight-card-image" loading="lazy"src="./assets/image-lending/generalEng/iOS - меню (3).png" alt="Latest news">
 						<p class="block-eight-card-list-paragraf">Industry news</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/12.png" alt="Choreography Music Design">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (14).png" alt="Choreography Music Design">
 						<p class="block-eight-card-list-paragraf">Art Lab</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/13.png" alt="Questions Feed Trends">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (4).png" alt="Questions Feed Trends">
 						<p class="block-eight-card-list-paragraf">Ask Me</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" class="block-eight-card-image" src="./assets/image-lending/general/14.png" alt="Calendar">
+						<img class="block-eight-card-image" class="block-eight-card-image" src="./assets/image-lending/generalEng/iOS - меню (5).png" alt="Calendar">
 						<p class="block-eight-card-list-paragraf">Calendar</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/7.png" alt="White Box">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (6).png" alt="White Box">
 						<p class="block-eight-card-list-paragraf" >White Box</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/7.png" alt="Holy Book">
+						<img class="block-eight-card-image" src="./assets/image-lending/generalEng/iOS - меню (13).png" alt="Holy Book">
 						<p class="block-eight-card-list-paragraf">Holy Book</p>
 					</li>
 				</ul>
